--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
     "@novnc/novnc": "^1.6.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.7",
@@ -51,9 +52,12 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "redis": "^4.7.0",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.1.4",
-    "terraform-generator": "^6.4.2"
+    "terraform-generator": "^6.4.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/css": "^0.7.0",
